<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>foxglove_compressed_video</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="itr@todo.todo">itr</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>foxglove_msgs</depend>
  <depend>opencv</depend>
  <depend>gstreamer1.0</depend>
  <depend>gstreamer-app-1.0</depend>
  <depend>gstreamer-rtsp-server-1.0</depend>
  <exec_depend>depthai_ros_driver</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
